feat(backend): US-003 CA-36 to CA-40 (Audit Mode, File Security) Gatekeeper Backend Agent